dice.com (archived on 2009-06-17)
{
  "alexa_rank": 2622,
  "analysis_subcorpus": true,
  "categories": "business;jobrelated",
  "char_count": 17541,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.4,
  "homepage_snapshot_redirected_domain": "dice.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402032222id_/http://dice.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402032222id_/http%3A//dice.com",
  "interval": "2009_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "dice.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090617025156id_/http%3A//seeker.dice.com/common/seeker/docs/privacy.jsp",
  "policy_title": "Career Resources",
  "policy_url": "seeker.dice.com/common/seeker/docs/privacy.jsp",
  "sha1": "0b341cb1d6cbff9000d4915bc824a81929699b8c",
  "simhash": 13806798271159248476,
  "simhash_updated": false,
  "site_hostname": "dice.com",
  "site_url": "http://dice.com",
  "smog": 16.73,
  "strict_updated": false,
  "timestamp": "20090617025156",
  "word_count": 2816,
  "year": 2009
}

--- a/d/di/dic/dice.com.html
+++ b/d/di/dic/dice.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dice.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216162044id_/http%3A//seeker.dice.com/common/seeker/docs/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dice.com privacy policy that was archived on 2009-06-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617025156id_/http%3A//seeker.dice.com/common/seeker/docs/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -35,9 +35,12 @@
 
 
 
+
+
 <div id="hd">
 	<div style="padding:10px 0 7px 0;margin:0; vertical-align:bottom;">
 		<div style="float:left;padding:25px 0 0 0;"><a href="http://www.dice.com" style="padding:0;margin:0 15px 0 50px;"><img class="bannerlogo" src="/assets/images/DiceLogo_V.gif" alt="Dice - The Career Hub for Tech Insiders"></a></div>
+
 		<div style="float:right; margin: 0 20px 0 0;padding:0;">
 			<script type="text/javascript" language="JavaScript">
 				<!--
@@ -49,14 +52,15 @@
 				document.write('<\/NOLAYER>')
 				document.write('<ILAYER id="layer1" visibility="hidden" width=728 height=90 left=10><\/ILAYER>')
 				//-->
-			</script><nolayer><iframe src="http://ad.doubleclick.net/adi/dice.dart/job_tools;kw=;sz=728x90;ord=2485?" width="728" height="90" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><A HREF="http://ad.doubleclick.net/jump/dice.dart/job_tools;kw=;abr=!ie;sz=728x90;ord=2485?"><IMG SRC="http://ad.doubleclick.net/ad/dice.dart/job_tools;kw=;abr=!ie;sz=728x90;ord=2485?" border=0 height="90" width="728"></A></iframe></nolayer><ilayer id="layer1" visibility="hidden" width="728" height="90" left="10"></ilayer>
+			</script><nolayer><iframe src="http://ad.doubleclick.net/adi/dice.dart/job_tools;kw=;sz=728x90;ord=2818?" width="728" height="90" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><A HREF="http://ad.doubleclick.net/jump/dice.dart/job_tools;kw=;abr=!ie;sz=728x90;ord=2818?"><IMG SRC="http://ad.doubleclick.net/ad/dice.dart/job_tools;kw=;abr=!ie;sz=728x90;ord=2818?" border=0 height="90" width="728"></A></iframe></nolayer><ilayer id="layer1" visibility="hidden" width="728" height="90" left="10"></ilayer>
 		</div>
+
 		<div class="clear" style="clear:both;"></div>
 	</div>
 	<div id="topnav" style="clear:both;">
 		<div class="mainnav seekernav">
 			<ul style="margin:0;padding:0;">
-				<li><a href="http://seeker.dice.com/jobsearch/genthree/index.jsp">Search Jobs</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3000">MyDice</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=1040">MyResume</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3003">Search Agents</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3005">Saved Jobs</a></li><li><a href="http://ad.doubleclick.net/clk;208068316;7836278;s?http://marketing.dice.com/training/VU_Dice_TrainingTab_HTML_100108.htm" target="_blank">Training</a></li><li><a href="http://career-resources.dice.com/common/seeker/docs/resources.jsp">Career News</a></li><li><a href="http://ad.doubleclick.net/clk;206538070;7836278;p?http://www.cyberedit.com/cgi-local/ya/click_dice_home.pl?id=dice-rw" target="_blank">Resume Writing</a> </li><li><a href="http://seeker.dice.com/olc/">Discussions</a></li><li><a href="http://www.dice.com/DicePlay/">DicePlay</a></li>
+				<li><a href="http://seeker.dice.com/jobsearch/genthree/index.jsp">Search Jobs</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3000">MyDice</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=1040">MyResume</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3003">Search Agents</a></li><li><a href="http://seeker.dice.com/profman/servlet/ProfMan?op=3005">Saved Jobs</a></li><li><a href="http://ad.doubleclick.net/clk;210965178;7836278;x?http://marketing.dice.com/training/VU_Dice.com_TrainingTab_PMLaunch_HTML_123008.html" target="_blank">Training</a></li><li><a href="http://career-resources.dice.com/articles/content">Career News</a></li><li><a href="http://ad.doubleclick.net/clk;206538070;7836278;p?http://www.cyberedit.com/cgi-local/ya/click_dice_home.pl?id=dice-rw" target="_blank">Resume Writing</a> </li><li><a href="http://seeker.dice.com/olc/">Discussions</a></li><li><a href="http://www.dice.com/DicePlay/">DicePlay</a></li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -147,11 +151,15 @@
 
 
 
+
+
 <div id="ft">
 	<div class="footerlinks">
 		<a href="http://seeker.dice.com/profman/servlet/ProfMan?op=1045">Contact Us</a> | <a href="http://seeker.dice.com/assets/help/help_seeker/help_seeker.htm" target="_blank">Help</a> | <a href="http://about.dice.com/">About Us</a> | <a href="http://seeker.dice.com/common/seeker/docs/siteAdvertising.jsp">Advertising</a> | <a href="http://seeker.dice.com/common/seeker/docs/privacy_protect.jsp">Security Tips</a> | <a href="http://seeker.dice.com/common/seeker/docs/privacy.jsp">Privacy Statement</a> | <a href="http://seeker.dice.com/common/seeker/docs/dice_jobs.jsp">Work at Dice</a> 
 	</div>
-	<p>Copyright ©1990 - 2008 Dice All rights reserved. Use of this site is subject to certain <a href="http://seeker.dice.com/common/seeker/docs/terms_and_conditions.jsp">Terms and Conditions</a>.</p>
+	<div class="footerlinks">
+		<p>Copyright ©1990 - 2009 Dice All rights reserved. Use of this site is subject to certain <a href="http://seeker.dice.com/common/seeker/docs/terms_and_conditions.jsp">Terms and Conditions</a>.</p>
+	</div>
 </div>
 
 <!-- FINISH FOOTER TEMPLATE HTML -->
