visajourney.com (archived on 2009-06-17)
{
  "alexa_rank": 34603,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5041,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.43,
  "homepage_snapshot_redirected_domain": "visajourney.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090319012951id_/http://visajourney.com/forums/index.php?act=home",
  "homepage_snapshot_url": "https://web.archive.org/web/20090319012951id_/http%3A//visajourney.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "visajourney.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090617033031id_/http%3A//www.visajourney.com/forums/index.php%3Fautocom%3Dcustom%26page%3Dprivacy",
  "policy_title": "VisaJourney.com -> Privacy Policy",
  "policy_url": "visajourney.com/forums/index.php?autocom=custom&page=privacy",
  "sha1": "10e11c2abb54e817370d23e33ad3f20f214a5285",
  "simhash": 9502875668520626893,
  "simhash_updated": true,
  "site_hostname": "visajourney.com",
  "site_url": "http://visajourney.com",
  "smog": 13.77,
  "strict_updated": true,
  "timestamp": "20090617033031",
  "word_count": 816,
  "year": 2009
}

--- a/v/vi/vis/visajourney.com.html
+++ b/v/vi/vis/visajourney.com.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the visajourney.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216161211id_/http%3A//www.visajourney.com/forums/index.php%3Fautocom%3Dcustom%26page%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the visajourney.com privacy policy that was archived on 2009-06-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617033031id_/http%3A//www.visajourney.com/forums/index.php%3Fautocom%3Dcustom%26page%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <link rel="shortcut icon" href="favicon.ico">
 <title>VisaJourney.com -&gt; Privacy Policy</title>
-<meta name="keywords" content="K-1, K1, K-2, K2, K-3, K-4, K3, K4, fiance visa, fiancee visa, k1 visa, immigration, immigrant, marriage based, immigration forms, I-129F, I129f, I-130, I-864, AOS, employment authorization, USCIS, EAD">
-<meta name="description" content="Friendly family and marriage based immigration community where users discuss their experiences with K1 Visas, K3 Visas, IR1 Visas, Adjustment of Status, etc..  Our most popular features include Guides, Forums, Timelines and more.">
+<meta name="keywords" content="k1 visa, fiance visa, fiancee visa, k3 visa, marriage visa, ir1 visa, immigration forums, us immigration, family immigration, immigration, immigrant, marriage based, immigration forms, I-129F, I129f, I-130, I-864, adjustment of status, green card, employment authorization, uscis, ead, k-1 visa, k-3 visa, k-1, k-3">
+<meta name="description" content="Family and marriage based immigration community sharing experiences with K1 Visas, K3 Visas, IR1 Visas, Adjustment of Status, etc..  Our most popular features include Guides, Forums, Timelines and more.">
 <meta name="revisit-after" content="14 days">
 <meta name="robots" content="FOLLOW,INDEX">
  
@@ -61,7 +62,7 @@ ipsclass.settings['resize_percent']   = parseInt( "50" );
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
-    <td height="52" valign="top"><img src="http://www.visajourney.com/images/toplogo.gif" alt="Marriage and Family Based Immigration to the USA (K Visa)" width="500" height="52" border="0" align="top"></td>
+    <td height="52" valign="top"><img src="http://www.visajourney.com/images/toplogo.gif" alt="Family and Marriage Based Immigration to the USA" width="500" height="52" border="0" align="top"></td>
     <td height="52">
 <div align="right">
 <img src="../images/link-icon.gif" border="0" alt=""> <a href="http://www.visajourney.com/links">Links</a> 
@@ -220,7 +221,9 @@ ipsclass.settings['resize_percent']   = parseInt( "50" );
         Please be aware that we are not responsible for the privacy practices 
         of these companies. We currently use <a href="http://www.google.com">Google.com</a> for limited advertising. 
         You are encouraged to read their privacy policies by following their respective 
-        links. </p>
+        links. Google, as a third party vendor, uses cookies to serve its ads on VisaJourney.com.
+    Google's use of the DART cookie enables it to serve ads based on users visiting VisaJourney.com and other sites on the Internet.
+    Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html">Google ad and content network privacy policy</a>.</p>
       <p><strong>Links</strong><br>
         This web site contains links to other sites. Please be aware that we are 
         not responsible for the privacy practices of such other sites. We encourage 
@@ -264,19 +267,19 @@ ipsclass.settings['resize_percent']   = parseInt( "50" );
         can not be held responsible for notifying you of any changes made to this 
         policy.<br>
         <br>
-        <font color="#999999"><em>last updated: 2/29/04</em></font><strong></strong> 
+        <font color="#999999"><em>last updated: March 12, 2009</em></font><strong></strong> 
         <br>
         <br>
         <br>
       </p>
 </td>
   </tr>
-</tbody></table><div style="margin: 5px auto; font-family: verdana, helvetica, arial, sans-serif; font-size:0.8em;">Custom Pages v2.0.0 © Copyright 2008 Michael Corcoran.</div>
+</tbody></table><div style="margin: 5px auto; font-family: verdana, helvetica, arial, sans-serif; font-size:0.8em;">Custom Pages v2.0.0 © Copyright 2009 Michael Corcoran.</div>
 <table cellspacing="0" id="gfooter">
 	<tbody><tr>
 		<td width="45%"> </td>
 		<td width="10%" align="center" nowrap="nowrap"><a href="lofiversion/index.php"><b>Lo-Fi Version</b></a></td>
-		<td width="45%" align="right" nowrap="nowrap">Time is now: 16th December 2008 - 11:12 AM</td>
+		<td width="45%" align="right" nowrap="nowrap">Time is now: 16th June 2009 - 10:30 PM</td>
 	</tr>
 </tbody></table>
 <script type="text/javascript">
@@ -296,12 +299,12 @@ show_inline_messages();
 <!-- Copyright Information -->
         				  <div align="center" class="copyright">
         				  	Powered By <a href="http://www.invisionboard.com" style="text-decoration:none" target="_blank">IP.Board</a>
-        				  	 © 2008 &nbsp;<a href="http://www.invisionpower.com" style="text-decoration:none" target="_blank">IPS, Inc</a>.
+        				  	 © 2009 &nbsp;<a href="http://www.invisionpower.com" style="text-decoration:none" target="_blank">IPS, Inc</a>.
         				  </div>
 		<!-- / Copyright -->
-<center>Copyright © 2003-2008 VisaJourney.com. All Rights Reserved.<br> <a href="http://www.visajourney.com/sitemap/">Global 
+<center>Copyright © 2003-2009 VisaJourney.com. All Rights Reserved.<br> <a href="http://www.visajourney.com/sitemap/">Global 
   Site Map</a> | <a href="http://www.visajourney.com/contact/">Contact Us</a> | 
-  <a href="http://www.visajourney.com/forums/index.php?autocom=custom&amp;page=privacy">Privacy Policy</a> | <a href="http://www.visajourney.com/forums/index.php?autocom=custom&amp;page=terms">Terms of Service</a></center><br>
+  <a href="http://www.visajourney.com/forums/index.php?autocom=custom&amp;page=privacy">Privacy Policy</a> | <a href="http://www.visajourney.com/forums/index.php?autocom=custom&amp;page=terms">Terms of Service</a> | <img src="http://www.visajourney.com/images/twitter.gif" border="0"><a href="http://twitter.com/visajourney">VJ @Twitter</a></center><br>
 </div>
  
 </body></html>
