--- a/p/pi/pio/pioneerthinking.com.html
+++ b/p/pi/pio/pioneerthinking.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pioneerthinking.com privacy policy that was archived on 2009-04-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090422135439id_/http%3A//www.pioneerthinking.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pioneerthinking.com privacy policy that was archived on 2009-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090913063821id_/http%3A//www.pioneerthinking.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
   <title>Privacy Policy - Pioneer Thinking </title>
@@ -72,40 +72,32 @@ a {  text-decoration: underline}
       </tr>
     </tbody></table></td>
     <td width="601">
-    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+    <p></p><center><table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tbody><tr>
         <td width="601" height="50" valign="TOP">
-        <table width="100%" border="0" cellpadding="0" cellspacing="0">
+        <p></p><center><table width="100%" border="0" cellpadding="0" cellspacing="0">
           <tbody><tr>
             <td width="601" height="50">
-            <p></p><center><table width="100%" border="0" cellspacing="8" cellpadding="0">
+            <p></p><center><table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr>
                 <td width="518">
-                <table width="100%" border="0" cellspacing="2" cellpadding="0">
+                <p></p><center><table width="100%" border="0" cellspacing="2" cellpadding="0">
                   <tbody><tr>
                     <td width="100%">
-                    <table width="510" border="0" cellspacing="0" cellpadding="0">
+                    <p></p><center><table width="510" border="0" cellspacing="0" cellpadding="0">
                       <tbody><tr>
-                        <td width="510" height="2" bgcolor="#990099"></td>
+                        <td width="510" height="2" bgcolor="#ffffff">
+                        <p></p><center><img src="images/banner.gif" align="MIDDLE" border="0" width="468" height="60" naturalsizeflag="3"></center></td>
                       </tr>
-                    </tbody></table><table width="100%" border="0" cellspacing="8" cellpadding="0">
-                      <tbody><tr>
-                        <td width="100%" bgcolor="#02869d" height="35">
-                        <p></p><center><font color="#ffffff" size="-1" face="Arial">As you
-                        simplify your life, the laws of the universe will be simpler;
-                        solitude will not be solitude, poverty will not be poverty, nor
-                        weakness weakness - </font><font color="#ffffff" size="-2" face="Arial">Henry
-                        David Thoreau</font></center></td>
-                      </tr>
-                    </tbody></table></td>
+                    </tbody></table></center></td>
                   </tr>
-                </tbody></table></td>
+                </tbody></table></center></td>
               </tr>
             </tbody></table></center></td>
           </tr>
-        </tbody></table></td>
+        </tbody></table></center></td>
       </tr>
-    </tbody></table></td>
+    </tbody></table></center></td>
   </tr>
   <tr>
     <td colspan="2" valign="TOP">
@@ -149,12 +141,13 @@ a {  text-decoration: underline}
               </tr>
             </tbody></table></p>
 
-            <p><font size="-1" face="Arial">We use third-party advertising
-            companies to serve ads when you visit our website. These companies
-            may use information (not including your name, address, email
-            address, or telephone number) about your visits to this and other
-            websites in order to provide advertisements about goods and services
-            of interest to you.</font></p>
+            <p><font size="-1" face="Arial">We use third-party advertising companies to
+            serve ads when you visit our Web site. These companies may use aggregated
+            information (not including your name, address, email address or telephone number)
+            about your visits to this and other Web sites in order to provide advertisements
+            about goods and services of interest to you. If you would like more information
+            about this practice and to know your choices about not having this information
+            used by these companies, <a href="http://www.networkadvertising.org/managing/opt_out.asp" target="_blank">click here</a>.</font></p>
 
             <p><font size="-1" face="Arial">While surfing our site, you may
             on occassion visit <b>third party sites </b>via text links or
@@ -307,8 +300,7 @@ a {  text-decoration: underline}
                 <td width="100%" height="36">
                 <p></p><center><table width="100%" border="0" cellpadding="0" cellspacing="0">
                   <tbody><tr>
-                    <td>
-                    <p></p><center><img src="images/banner.gif" align="BOTTOM" border="0" width="468" height="60" naturalsizeflag="3"></center></td>
+                    <td></td>
                   </tr>
                 </tbody></table></center></td>
               </tr>
@@ -346,7 +338,7 @@ a {  text-decoration: underline}
             </tbody></table><table width="100%" border="0" cellpadding="0" cellspacing="0">
               <tbody><tr>
                 <td width="100%" height="36">
-                <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <p></p><center><table width="100%" border="0" cellpadding="0" cellspacing="0">
                   <tbody><tr>
                     <td width="651" height="23">
                     <dl>
@@ -366,7 +358,7 @@ a {  text-decoration: underline}
                     </dt></dl>
 </td>
                   </tr>
-                </tbody></table></td>
+                </tbody></table></center></td>
               </tr>
             </tbody></table></center><p></p>
 
