--- a/k/ku/kur/kuro5hin.org.html
+++ b/k/ku/kur/kuro5hin.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kuro5hin.org privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618185321id_/http%3A//www.kuro5hin.org/special/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kuro5hin.org privacy policy that was archived on 2009-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090913081245id_/http%3A//www.kuro5hin.org/special/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
     <title>kuro5hin.org || Our Privacy Policy</title>
@@ -14,8 +14,8 @@
 text-decoration: none;
 color: #000;
 }
-a:hover.adlink { color: #006699; }
-a.adlink { color: #006699; }
+a:hover.adlink, a:hover.nerf { color: #006699; }
+a.adlink, a.nerf { color: #006699; }
 .blogad_link { padding-bottom: 20px; font-family: verdana; font-size: 10pt;}
 
 /* tag-cloud styles */
