mlcalc.com (archived on 2009-09-14)
{
  "alexa_rank": 341664,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 16029,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.39,
  "homepage_snapshot_redirected_domain": "mlcalc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090908062416id_/http://www.mlcalc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090908062416id_/http%3A//mlcalc.com",
  "interval": "2009_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mlcalc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090914022856id_/http%3A//www.mlcalc.com/privacy.htm",
  "policy_title": "Privacy Policy",
  "policy_url": "mlcalc.com/privacy.htm",
  "sha1": "d96cbc1df9e44a0d5db72ce38795d07fd4d8bd14",
  "simhash": 3139287396238154205,
  "simhash_updated": false,
  "site_hostname": "mlcalc.com",
  "site_url": "http://mlcalc.com",
  "smog": 18.46,
  "strict_updated": false,
  "timestamp": "20090914022856",
  "word_count": 2448,
  "year": 2009
}

--- a/m/ml/mlc/mlcalc.com.html
+++ b/m/ml/mlc/mlcalc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mlcalc.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619054441id_/http%3A//www.mlcalc.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mlcalc.com privacy policy that was archived on 2009-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090914022856id_/http%3A//www.mlcalc.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Privacy Policy</title>
@@ -158,7 +158,7 @@ pageTracker._trackPageview();
 			<tr><td colspan="3" height="5"></td></tr>
 			<tr>
 				<td colspan="3" class="small" align="center">
-					Copyright © <span title="0.92">2008-2009</span> MLCALC.COM. All rights reserved. <a href="http://www.mlcalc.com/terms.htm" class="copyright">Terms of Use</a> &nbsp;|&nbsp; <a href="http://www.mlcalc.com/privacy.htm" class="copyright">Privacy</a>
+					Copyright © <span title="G:0.041s Q: 3 in 0.011s">2008-2009</span> MLCALC.COM. All rights reserved. <a href="http://www.mlcalc.com/terms.htm" class="copyright">Terms of Use</a> &nbsp;|&nbsp; <a href="http://www.mlcalc.com/privacy.htm" class="copyright">Privacy</a>
 				</td>
 			</tr>
 			</tbody></table>
