--- a/c/cu/cut/cut-the-knot.org.html
+++ b/c/cu/cut/cut-the-knot.org.html
@@ -1,15 +1,20 @@
-<!--The following is the downloaded HTML source of the cut-the-knot.org privacy policy that was archived on 2006-09-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060928070206id_/http%3A//www.cut-the-knot.org/Privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cut-the-knot.org privacy policy that was archived on 2009-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090914053355id_/http%3A//www.cut-the-knot.org/Privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
-   <title>Interactive Mathematics Miscellany and Puzzles, Reciprocal links</title>
+   <title>Privacy Policy from Interactive Mathematics Miscellany and Puzzles</title>
    <meta name="Author" content="Alexander Bogomolny">
-   <meta name="title" content="Interactive Mathematics Miscellany and Puzzles, Reciprocal links">
-   <meta name="Description" content="Interactive Mathematics Miscellany and Puzzles, Reciprocal links">
-   <meta name="KeyWords" content="Reciprocal links, Interactive Mathematics Miscellany and Puzzles">
-</head>
+   <meta name="title" content="Privacy Policy">
+   <meta name="Description" content="Privacy Policy at Interactive Mathematics Miscellany and Puzzles">
+   <meta name="KeyWords" content="mathematics,math help,Privacy Policy, Interactive Mathematics Miscellany and Puzzles">
+<script type="text/javascript">
+var MyPageLoc = document.location;
+var MyPageTitle = document.title;
+</script>
+<link href="/ctk.css" rel="stylesheet" type="text/css">
 
-<body text="#000000" bgcolor="#c0dcc0" link="#4444aa" vlink="#8844aa" alink="#008080">
+
+</head><body text="#000000" bgcolor="#ffffe8" link="#4444aa" vlink="#8844aa" alink="#008080">
 
 <center><table width="80%"><tbody><tr><td>
 
@@ -17,45 +22,29 @@
 
 <p>This site has a very simple privacy policy: we believe that your privacy is paramount.</p> 
 
-<p>We do not collect any private information from our visitors except that which is being public by default. Namely, we maintain a list of <a href="ReciprocalMain.shtml">reciprocal links</a>, i.e. a list of sites with links to our pages. If you find your site on the list and wish it to be removed just send us a short email at <a href="mailto:noreciprocal@cut-the-knot.com">noreciprocal@cut-the-knot.com</a> with the URL of your site.</p>
+<p>We do not collect any information - private or otherwise - from our visitors. On occasion we link to sites relevant to a discussion on a particular topic. These sites may have different privacy policy. We make an effort to only link to the sites that follow decent, common use guidelines.</p>
 
-<p>The only information that is collected when you visit this site is reflected in our counter which increases by 1 with every site access.</p>
+<p>Pages at our site that carry Java applets offer those applets for personal use. When you purchase a license our software leaves a cookie on your computer identifying the applet. The cookie is a small text file that contains no other information but the name of the applet(s) and the names of the files where they were purchased. This information is used to create a zipped file with the selected applets. The cookie has a life span of several hours. It expires automatically.</p>
 
-<p>If you post a question to the <a href="exchange/index.shtml">CTK Exchange</a> we leave a "cookie" on your computer that identifies your question. This is only used in the process of posting the question to establish communication between two otherwise independent pages that are involved in posting.</p>
+<p>The only time you become identifiable is when you send us email. We may use your email address to communicate with you on the topic of your request but not otherwise. We shall not give or sell your email address to any other party.</p>
 
-<p>The only time you become identifiable is when you send us email. We may use your email address to communicate with you but will not give or sell your email address to any other party.</p>
+<p>The Interactive Mathematics Miscellany site works with reputed third parties that serve ads to this site: <a href="http://www.google.com">google.com</a>, <a href="http://www.HotChalk.com">HotChalk.com</a> and <a href="http://www.fastclick.com">ValueClick.com</a>. These companies do attempt to track your page selections with the purpose of determining your interests and browsing habits. The idea is that this information may help them serve you better, for example, by displaying ads that, in their view, may be of greater interest to you than the alternatives. While this information may be deemed personal, there is no way that those companies identify you as an individual.</p>
 
-<p>Interactive Mathematics Miscellany works with a reputed third party that serves ads to this site. To find out more about how DoubleClick.com manages the privacy of information in conjunction with serving ads on this site, please read their <a href="http://www.sonar.com/content/privacy.htm">Privacy Statement</a>.</p>
+<p>If you suspect that any of our pages do not comply with the stated policy please let us know of any infraction via the <a href="http://www.cut-the-knot.org/MailNotificationPage.shtml">Mail Notification Page</a>. We promise a swift action.</p>
 
+<p>Thank you for using our site.</p>
 
 <center><img src="tbow_sh.gif" border="0" height="18" width="240"><br>
 <p align="right">
-<a href="front.shtml"><img src="/gifs/bottom/front.gif" width="84" height="13" border="0"></a>
-<a href="content.shtml"><img src="/gifs/bottom/content.gif" width="67" height="13" border="0"></a>
-<a href="pitch.shtml"><img src="/gifs/bottom/store.gif" width="47" height="13" border="0"></a>
+<a href="http://www.cut-the-knot.org/front.shtml"><img src="/gifs/bottom/front.gif" width="84" height="13" border="0"></a>
+<a href="http://www.cut-the-knot.org/content.shtml"><img src="/gifs/bottom/content.gif" width="67" height="13" border="0"></a>
+<a href="http://astore.amazon.com/ctksoftwareinc"><img src="/gifs/bottom/store.gif" width="47" height="13" border="0"></a>
 </p>
 
 <p align="left">
-<font size="-1">Copyright © 1996-2006 <a href="http://www.cut-the-knot.org">Alexander Bogomolny</a></font></p>
+<font size="-1">Copyright © 1996-2009 <a href="http://www.cut-the-knot.org/index.shtml">Alexander Bogomolny</a></font></p>
 </center></td></tr></tbody></table></center>
-<!-- DynamiContext AdLinks -->
-<script language="JavaScript">
-var dc_UnitID = 14;
-var dc_PublisherID = 3380;
-var dc_AdLinkColor = 'blue';
-var dc_adprod='ADL';
-var dc_open_new_win = 'yes';
-</script>
 
-<script language="JavaScript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js"></script>
-<!-- DynamiContext AdLinks -->
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-358853-1";
-urchinTracker();
-</script>
 
 
 
