--- a/a/ar/art/art-is-fun.com.html
+++ b/a/ar/art/art-is-fun.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the art-is-fun.com privacy policy that was archived on 2009-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090531102126id_/http%3A//www.art-is-fun.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the art-is-fun.com privacy policy that was archived on 2009-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090914070910id_/http%3A//www.art-is-fun.com/privacy-policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/art-is-fun-2.dwt" codeOutsideHTMLIsLocked="false" --><head><link rel="shortcut icon" type="image/vnd.microsoft.icon" href="http://www.art-is-fun.com/favicon.ico">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/art-is-fun-2.dwt" codeOutsideHTMLIsLocked="false" --><head><link rel="canonical" href="http://www.art-is-fun.com/privacy-policy.html"><link rel="shortcut icon" type="image/vnd.microsoft.icon" href="http://www.art-is-fun.com/favicon.ico">
 
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Privacy Policy :: Art is fun</title><meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
@@ -64,9 +64,9 @@
           
       <!-- InstanceEndEditable --></td>
       <td height="156" colspan="2" align="left" valign="top" bgcolor="#FFFFFF"> 
-        <div align="left"><font size="1" face="Arial, Helvetica, sans-serif"><img src="../image-files/art-is-fun-logo-small.jpg" alt="Art is fun!" width="700" height="156"><script type="text/javascript" language="javascript">
+        <div align="left"><font size="1" face="Arial, Helvetica, sans-serif"><img src="http://www.art-is-fun.com/image-files/art-is-fun-logo-small.jpg" alt="Art is fun!" width="700" height="156"> <script type="text/javascript" language="javascript">
 if (window != top) top.location = self.location
-</script> </font></div></td>
+</script></font></div></td>
     </tr>
     <tr> 
       <td width="67%" height="87" align="left" valign="top" bgcolor="#FFFFFF"><!-- InstanceBeginEditable name="art is fun" --> 
