--- a/s/sp/spo/sportsbet.com.au.html
+++ b/s/sp/spo/sportsbet.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sportsbet.com.au privacy policy that was archived on 2008-07-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080719123907id_/https%3A//www.sportsbet.com.au/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sportsbet.com.au privacy policy that was archived on 2009-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090914081253id_/https%3A//www.sportsbet.com.au/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta name="title" content="Sportsbet Australia - Licensed Sports Betting">
@@ -8,6 +8,7 @@
 <meta name="keywords" content="sportsbet australia,sportsbet,australia,australian,australian sports,australian sportsbetting,australian sports betting,sports-betting,sport-betting,sports bet,sports-bet,sportbet,sport bet,sport-bet,sportsbets,sports bets,sports-bets,sportsbetting,sportbetting,sportingbet,sporting bet,sportsbook,sportsbooks,sports book,australian sportsbook,sports betting,sport betting,sport odds,sports odds,sports gambling,sports wagering,online betting,online sports betting,online gambling,online wagering,online bookmaker,tax free betting,bookmaker,bookie,bet,bet online,bet on sports,betting online,bets,wager,wager online,wagering,punt,gamble,gambling,gamble online,smart gambler,gambling advice,gambling tips,internet sportsbook,internet betting,internet gambling,internet wagering,football,football betting,rugby,rugby league,rugby league betting,rugby union,rugby union betting,afl,afl betting,aussie rules,aussie rules betting,soccer,soccer betting,boxing,boxing betting,cricket,cricket betting,tennis,tennis betting,golf,golf betting,motor sport,basketball,basketball betting,baseball,baseball betting,major league,horse racing,greyhound racing,dogs,harness racing,trotts,nrl,nrl betting,nfl,nfl, betting,nba,nba betting,nhl,nhl betting,mlb,mlb betting,playoffs,the ashes,one day cricket,superbowl,stanley cup,world series,world cup,Melbourne Cup,Caulfiled Cup,Spring Racing Carnival,Golden Slipper,Cox plate,Victoria Derby,Oaks,Guineas,Sydney Cup,formula one,f1,formula 1,formula1,betting forum,sports forum,discussion forum,secure betting,secure,legal sports betting,legal gambling,licensed gambling,licensed bookmaker,licensed betting">
 <meta name="language" content="en">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <title>Sportsbet Australia - Licensed Sports Betting</title>
 
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
@@ -42,7 +43,7 @@
             <div class="headerImage">
               <div class="headerjpg"><a href="/"><img src="/images/header/logo.gif" alt="Logo"></a></div>
               <div class="headerText">
-                <span class="headerTextWhite">1800 132 387</span><br><br>
+                <span class="headerTextWhite"></span><br><br>
                 <span class="headerTextYellow">Australia's Number 1 Betting Agency</span>
               </div>
             </div>
@@ -50,15 +51,15 @@
           <!-- Login Section -->          
           <div id="joinbar">
              <div id="join">
-  <a href="https://www.sportsbet.com.au/register/now"><img alt="Join_Now" src="/images/header/join_now.gif"></a></div>
+  <a href="http://www.sportsbet.com.au/register/now"><img alt="Join_Now" src="/images/header/join_now.gif"></a></div>
              <div id="login">
-                  <a href="https://www.sportsbet.com.au/login"><img class="valign" src="/images/header/login.gif" alt="Login"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/tipping/home"><img class="valign" src="/images/header/milliondollar.jpg" alt="Milliondollar"></a>             </div>
+                  <a href="http://www.sportsbet.com.au/login"><img class="valign" src="/images/header/login.gif" alt="Login"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/tipping/home"><img class="valign" src="/images/header/milliondollar.jpg" alt="Milliondollar"></a>             </div>
              <div id="accounts">
                             </div>
           </div>
           
-          <div id="globalNav"><a onmouseover="window.status='Home'; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/">HOME</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/banking', {asynchronous:true, evalScripts:false}); return false;">BANKING</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/my-account', {asynchronous:true, evalScripts:false}); return false;">MY ACCOUNT</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/betting-products', {asynchronous:true, evalScripts:false}); return false;">BETTING PRODUCTS</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/offers', {asynchronous:true, evalScripts:false}); return false;">OFFERS</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/betting-info-and-rules', {asynchronous:true, evalScripts:false}); return false;">BETTING INFORMATION</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/general-info', {asynchronous:true, evalScripts:false}); return false;">GENERAL INFORMATION</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/contact-us">CONTACT US</a></div>
-          <div id="secondNav"><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/about-us">ABOUT US</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/faqs">FAQS</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/id-requirements">ID REQUIREMENTS</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/responsible-gambling">RESPONSIBLE GAMBLING</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/privacy">PRIVACY AND SECURITY</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/how-to-navigate">HOW TO NAVIGATE</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="https://www.sportsbet.com.au/content/general-info/todays-sport-tv">TODAY'S SPORT TV</a>&nbsp;&nbsp;&nbsp;</div>
+          <div id="globalNav"><a onmouseover="window.status='Home'; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/">HOME</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/banking', {asynchronous:true, evalScripts:false}); return false;">BANKING</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/my-account', {asynchronous:true, evalScripts:false}); return false;">MY ACCOUNT</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/betting-products', {asynchronous:true, evalScripts:false}); return false;">BETTING PRODUCTS</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/offers', {asynchronous:true, evalScripts:false}); return false;">OFFERS</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/general-info', {asynchronous:true, evalScripts:false}); return false;">GENERAL INFORMATION</a><a onmouseover="window.status=''; return true;" onmouseout="window.status=''; return true;" href="#" onclick="new Ajax.Updater('secondNav', '/components/subnav/id/betting-info-and-rules', {asynchronous:true, evalScripts:false}); return false;">BETTING INFORMATION</a><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/contact-us">CONTACT US</a></div>
+          <div id="secondNav"><a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/general-info/about-us">ABOUT US</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/general-info/faqs">FAQS</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/general-info/id-requirements">ID REQUIREMENTS</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/general-info/responsible-gambling">RESPONSIBLE GAMBLING</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/privacy">PRIVACY AND SECURITY</a>&nbsp;&nbsp;&nbsp;<a onmouseover="window.status=' '; return true;" onmouseout="window.status=''; return true;" href="http://www.sportsbet.com.au/content/general-info/how-to-navigate">HOW TO NAVIGATE</a>&nbsp;&nbsp;&nbsp;</div>
         </div>
         <div id="leftnav">
 
@@ -789,16 +790,17 @@ Further Information about privacy issues in Australia, you can visit the website
     <table width="100%">
       <tbody><tr><td></td><td align="center"><img src="/images/footer/ccards.gif" alt="Ccards"></td><td></td></tr>
       <tr><td><img src="/images/footer/mustbe18.gif" alt="Mustbe18"></td><td align="center">
-      <a href="http://partners.sportsbet.com.au">Partner Services</a> | 
-      <a href="/content/general-info/about-us">About Us</a> | 
-      <a href="/privacy">Privacy and Security</a> | 
-      <a href="/content/general-into/responsible-gambling">Responsible Gaming</a> | 
+      <a href="http://www.sportsbetaffiliates.com.au/">Affiliates</a> |
+      <a href="/content/general-info/about-us">About Us</a> |
+      <a href="/privacy">Privacy and Security</a> |
+      <a href="/content/general-into/responsible-gambling">Responsible Gaming</a> |
       <a href="/rules">Condition of Use</a><br>
       Licensed and regulated by Australia's Northern Territory Government<br>
       <strong>Copyright © Sportsbet Pty Ltd 2006</strong></td><td><img src="/images/footer/verisign.gif" alt="Verisign"></td></tr>
     </tbody></table>
   </div>
 </div>
+
 <script type="text/javascript">
 //<![CDATA[
 
