businesscatalyst.com (archived on 2009-09-14)
{
  "alexa_rank": 23604,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6544,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.77,
  "homepage_snapshot_redirected_domain": "businesscatalyst.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090914114316id_/http://businesscatalyst.com/%2f",
  "homepage_snapshot_url": "https://web.archive.org/web/20090914114316id_/http%3A//businesscatalyst.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "businesscatalyst.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090914112624id_/http%3A//businesscatalyst.com/privacypolicy",
  "policy_title": "Business Catalyst - Privacy Policy",
  "policy_url": "businesscatalyst.com/privacypolicy",
  "sha1": "2d01767c114e5ac0dde0ac7644e224e719040cb0",
  "simhash": 743572788389416028,
  "simhash_updated": false,
  "site_hostname": "businesscatalyst.com",
  "site_url": "http://businesscatalyst.com",
  "smog": 15.95,
  "strict_updated": false,
  "timestamp": "20090914112624",
  "word_count": 1047,
  "year": 2009
}

--- a/b/bu/bus/businesscatalyst.com.html
+++ b/b/bu/bus/businesscatalyst.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the businesscatalyst.com privacy policy that was archived on 2009-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090419220731id_/http%3A//businesscatalyst.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the businesscatalyst.com privacy policy that was archived on 2009-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090914112624id_/http%3A//businesscatalyst.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" dir="ltr" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><!-- BC_OBNW --><head>
 <title>Business Catalyst - Privacy Policy</title>
@@ -36,7 +36,7 @@
 			<li class="why tab"><a href="http://businesscatalyst.com/why">Why use BC</a></li>
 			<li class="test tab"><a href="http://businesscatalyst.com/testimonials">Testimonials</a></li>
 			<li class="sell tab"><a href="http://businesscatalyst.com/join">Sell BC</a></li>
-			<li class="webinar tab"><a href="http://businesscatalyst.com/webinar-booking">Join Webinar</a></li>
+			<li class="webinar tab"><a href="http://businesscatalyst.com/demo">Join Webinar</a></li>
 			<li class="trial notab"><a href="http://system.businesscatalyst.com/signup/obb.aspx">Free Trial</a></li>
 			<li class="contact notab"><a href="http://businesscatalyst.com/contact">Contact</a></li>
 			<li class="about notab"><a href="http://businesscatalyst.com/about">About</a></li>
@@ -112,10 +112,13 @@
 				<a href="http://businesscatalyst.com/behind-the-scenes">Behind the Scenes</a>  |
 				<a href="http://businesscatalyst.com/sitemap">Site Map</a>
 			</p>
-				
-			<p>Copyright © <a href="http://businesscatalyst.com">Business Catalyst</a> 2004-2009. All Rights Reserved.<br><a href="http://businesscatalyst.com/privacypolicy">Privacy Policy</a> | <a href="http://businesscatalyst.com/termsofuse">Terms of Use</a></p>
+			
+<p>
+            <img style="float: none; vertical-align: middle; margin-right: 9px;" src="http://businesscatalyst.com/cssimg/logo-adobe.png" alt="Adobe Logo" bc="1">
+            Copyright 2004 - 2009 Business Catalyst / Business Catalyst is an Adobe group company / All rights reserved / <a href="/privacypolicy">Privacy Policy</a> / <a href="/termsofuse">Terms of Use</a></p>
+	
 
-			<img class="fixPNG" src="/cssimg/powered-by-bc.png" alt="Powered by Business Catalyst">
+		
 		</div>
 	</div><!-- END #footer -->
 
