--- a/l/li/lis/listography.com.html
+++ b/l/li/lis/listography.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the listography.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618191814id_/http%3A//listography.com/action/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the listography.com privacy policy that was archived on 2009-09-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090915180320id_/http%3A//listography.com/action/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>listography: privacy policy</title>
 
-  <link rel="stylesheet" href="/static/css/style.r1467.css" type="text/css">
+  <link rel="stylesheet" href="/static/css/style.r1504.css" type="text/css">
   <script type="text/javascript">
 
 g_init_hooks = [];
@@ -191,7 +191,7 @@ function g_run_init_hooks()
     <div class="footer-container">
       <div class="footer-main">
         <hr id="footer-line">  <span class="footer-link">  <a href="/">listography.com</a>
-     &nbsp; / &nbsp;  <a href="/blog">news</a>
+     &nbsp; / &nbsp;  <a href="/blog">blog</a>
   &nbsp; / &nbsp;
   <a href="/action/guide">guide</a>
   &nbsp; / &nbsp;
